objects/Route_Schedule_Account__c.object
<CustomObject>
    <description>POC Junction Route_Schedule__c &lt;----&gt; Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Accel_VGT_Live_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Account Must Have A VGT Live Date</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Schedule Accounts</relationshipLabel>
        <relationshipName>Route_Schedule_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cassette_100_Fill_Level__c</fullName>
        <description>Number of $100 notes to fill at this location with for this specific collection.</description>
        <label>$100 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_1_Fill_Level__c</fullName>
        <description>Number of $1 notes to fill at this location with for this specific collection.</description>
        <label>$1 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassette_20_Fill_level__c</fullName>
        <description>Number of $20 notes to fill at this location with for this specific collection.</description>
        <label>$20 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Type__c</fullName>
        <description>Used for additional fills.</description>
        <inlineHelpText>Used for additional fills.</inlineHelpText>
        <label>Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collection_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fill_Levels_Completed__c</fullName>
        <description>Signifies that all the fill levels have a value.</description>
        <formula>FALSE
/*
AND( X1_Fill_Level__c != 0,
     X5_Fill_Level__c != 0,
     X20_Fill_Level__c != 0,
     X100_Fill_Level__c != 0 )
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Signifies that all the fill levels have a value.</inlineHelpText>
        <label>Fill Levels Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redemption_Asset_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypasses any update logic of attempted automatic set of Redemption_Type_From_Asset__c and Redemption_Asset__c in preference of allow an admin to manually set it. (BEFORE UPDATE EVENT ONLY)</description>
        <inlineHelpText>Bypasses any update logic of attempted automatic set of Redemption_Type_From_Asset__c and Redemption_Asset__c in preference of allow an admin to manually set it. (BEFORE UPDATE EVENT ONLY)</inlineHelpText>
        <label>Redemption Asset Manual Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redemption_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Flows to Rps.Redemption_Asset__c. Needed to see which redemption terminal we are using for the unified display. @see clRouteSvc.tagRedemptionTypes(List&lt;Route_Schedule_Account__c&gt; rsas)  (called from RSA Trigger)</description>
        <inlineHelpText>The application redemption terminal.</inlineHelpText>
        <label>Redemption Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Route Schedule Accounts</relationshipLabel>
        <relationshipName>Route_Schedule_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redemption_Terminal__c</fullName>
        <description>Use this to select which Redemption Terminal is desired.</description>
        <inlineHelpText>Use this to select which Redemption Terminal is desired. Defaults to RT1</inlineHelpText>
        <label>Redemption Terminal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RT1</fullName>
                    <default>true</default>
                    <label>RT1</label>
                </value>
                <value>
                    <fullName>RT2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Type_From_Asset__c</fullName>
        <description>The redemption type pulled via analyzing the assets associated with the account (as opposed to the FF that goes from Account and looks at GP Mfgr )</description>
        <inlineHelpText>The redemption type pulled via analyzing the assets associated with the account (as opposed to the FF that goes from Account and looks at GP Mfgr )</inlineHelpText>
        <label>Redemption Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_Type__c</fullName>
        <description>FF to account - redemption - gp manufacturer</description>
        <formula>Account__r.Redemption__r.GP_Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redemption Type (Obsolete)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replenishment_Type__c</fullName>
        <label>Replenishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Audit</fullName>
                    <default>true</default>
                    <label>Full Audit</label>
                </value>
                <value>
                    <fullName>Cash Fill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Schedule__c</fullName>
        <label>Route Schedule</label>
        <referenceTo>Route_Schedule__c</referenceTo>
        <relationshipLabel>Route Schedule Accounts</relationshipLabel>
        <relationshipName>Route_Schedule_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stop_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stop Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_RTs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of Redemption Terminals. (Set on Creation of RSA)</description>
        <inlineHelpText>Total # of Redemption Terminals. (Set on Creation of RSA)</inlineHelpText>
        <label>Total # of RTs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100_Fill_Level__c</fullName>
        <description>Number of $100 notes to fill a redemption at this location with. Used for Cash Logistics.</description>
        <inlineHelpText>Number of $100 notes to fill a redemption at this location with. Used for Cash Logistics.</inlineHelpText>
        <label>$100 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Fill_Level__c</fullName>
        <description>Number of $1 notes to fill a redemption at this location with. Used for Cash Logistics.</description>
        <inlineHelpText>Number of $1 notes to fill a redemption at this location with. Used for Cash Logistics.</inlineHelpText>
        <label>$1 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_Fill_Level__c</fullName>
        <description>Number of $20 notes to fill a redemption at this location with. Used for Cash Logistics.</description>
        <inlineHelpText>Number of $20 notes to fill a redemption at this location with. Used for Cash Logistics.</inlineHelpText>
        <label>$20 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Route Schedule Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Route_Schedule__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>Collection_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Fill_Levels_Completed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSA-{00000000}</displayFormat>
        <label>RSA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Schedule Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>